--- a/package.json
+++ b/package.json
@@ -3,22 +3,22 @@
   "version": "1.0.0",
   "description": "Landing page for trillo",
   "scripts": {
-    "watch:sass": "sass sass/main.scss css/style.css -w",
+    "watch:sass": "sass src/sass/main.scss src/css/style.css -w",
     "devserver": "lite-server --baseDir=\"src\"",
     "dev": "npm-run-all --parallel devserver watch:sass",
-    "compile:sass": "sass sass/main.scss css/style.comp.css",
-    "concat:css": "concat -o css/style.concat.css css/icon-font.css css/style.comp.css",
-    "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' css/style.concat.css -o css/style.prefix.css",
-    "compress:css": "sass css/style.prefix.css css/style.css --output-style compressed",
+    "compile:sass": "sass src/sass/main.scss src/css/style.comp.css",
+    "concat:css": "concat -o src/css/style.concat.css src/css/icon-font.css src/css/style.comp.css",
+    "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' src/css/style.concat.css -o src/css/style.prefix.css",
+    "compress:css": "sass src/css/style.prefix.css src/css/style.css --output-style compressed",
     "build": "npm-run-all compile:sass concat:css prefix:css compress:css"
   },
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer": "7.1.4",
-    "concat": "1.0.3",
+    "autoprefixer": "^10.4.20",
+    "concat": "^1.0.3",
     "lite-server": "^2.6.1",
-    "npm-run-all": "4.1.1",
-    "postcss-cli": "4.1.1",
-    "sass": "1.84.0"
+    "npm-run-all": "^4.1.5",
+    "postcss-cli": "^11.0.0",
+    "sass": "^1.85.0"
   }
 }
