--- a/package.json
+++ b/package.json
@@ -7,15 +7,13 @@
     "devserver": "lite-server --baseDir=\"src\"",
     "dev": "npm-run-all --parallel devserver watch:sass",
     "compile:sass": "sass src/sass/main.scss src/css/style.comp.css",
-    "concat:css": "concat -o src/css/style.concat.css src/css/icon-font.css src/css/style.comp.css",
-    "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' src/css/style.concat.css -o src/css/style.prefix.css",
-    "compress:css": "sass src/css/style.prefix.css src/css/style.css --output-style compressed",
-    "build": "npm-run-all compile:sass concat:css prefix:css compress:css"
+    "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' src/css/style.comp.css -o src/css/style.prefix.css",
+    "compress:css": "sass --style compressed src/css/style.prefix.css src/css/style.css",
+    "build": "npm-run-all compile:sass prefix:css compress:css"
   },
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^10.4.20",
-    "concat": "^1.0.3",
     "lite-server": "^2.6.1",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^11.0.0",
